<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        tools:context="com.example.android.soccercounter.MainActivity">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/team_a_hint"
                    android:singleLine="true"
                    android:textColor="#616161"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:fontFamily="sans-serif-medium" />


                <TextView
                    android:id="@+id/team_a_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/goals_zero"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    app:fontFamily="sans-serif-light" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/fouls_zero"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif-medium" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:onClick="addGoalTeamA"
                    android:text="@string/button_add_goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick="addFoulTeamA"
                    android:text="@string/button_add_foul" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/team_b_hint"
                    android:singleLine="true"
                    android:textColor="#616161"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/team_b_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/goals_zero"
                    android:textColor="#000000"
                    android:textSize="56sp"
                    app:fontFamily="sans-serif-light" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/fouls_zero"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif-medium" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:onClick="addGoalTeamB"
                    android:text="@string/button_add_goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick="addFoulTeamB"
                    android:text="@string/button_add_foul" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linear1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:onClick="reset"
            android:text="@string/button_reset" />
    </RelativeLayout>


</ScrollView>
